--- a/Iris Species Prediction Using RandomForest.ipynb
+++ b/Iris Species Prediction Using RandomForest.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b27067ab",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a9158356",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "cdd2044b",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "dfffdba6",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "abe622db",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
        "4                5.0               3.6                1.4               0.2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "45e0abe1",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "4  setosa  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "ac5b9a7b",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
        "4  setosa      True  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "e616c071",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "ba336a53",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "f44e4c8f",
    "metadata": {},
    "outputs": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "6851a6a1",
    "metadata": {},
    "outputs": [
@@ -449,7 +449,7 @@
        "RandomForestClassifier(n_jobs=2, random_state=0)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "d1aadee8",
    "metadata": {},
    "outputs": [],
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "9a7775ec",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
        "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2], dtype=int64)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "c09ef8a9",
    "metadata": {},
    "outputs": [
@@ -517,7 +517,7 @@
        "       [1.  , 0.  , 0.  ]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "68c0784f",
    "metadata": {},
    "outputs": [
@@ -539,7 +539,7 @@
        "array(['setosa', 'setosa', 'setosa', 'setosa', 'setosa'], dtype='<U10')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "2b2221d8",
    "metadata": {},
    "outputs": [
@@ -569,7 +569,7 @@
        "Categories (3, object): ['setosa', 'versicolor', 'virginica']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "51471630",
    "metadata": {},
    "outputs": [
@@ -647,7 +647,7 @@
        "virginica               0           0         12"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "ce4b49ce",
    "metadata": {},
    "outputs": [
@@ -677,7 +677,7 @@
        "array(['setosa', 'setosa'], dtype='<U10')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "id": "9b2cc1ef",
    "metadata": {},
    "outputs": [],
@@ -712,7 +712,9 @@
    "id": "1167f398",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "score."
+   ]
   },
   {
    "cell_type": "code",
